@@ -1,3 +1,6 @@
+24 June 2004 Sylvain Pion
+- Use CGAL_NTS instead of CGAL:: in Quotient::to_double.
+
 20 June 2004 Sylvain Pion
 - Minor optimisation : to_double(double) returns a const reference.
 
